--- a/Krevatotech/Codes/HomePage.html
+++ b/Krevatotech/Codes/HomePage.html
@@ -8,7 +8,7 @@
     <title>ΑΡΧΙΚΗ</title>
 
     <link rel="icon" href="/Images/BedArt_Icon.png">
-    <link rel="stylesheet" href="Krevatotech/Codes/style.css">
+    <link rel="stylesheet" href="Codes/style.css">
 
     <!--Boxicons Icons-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -31,7 +31,7 @@
             <ul>
             <li><a href="/Codes/HomePage.html">ΑΡΧΙΚΗ</a></li>
             <li>
-                <a href="Krevatotech/Codes/Beds.html">ΚΡΕΒΑΤΙΑ</a>
+                <a href="Codes/Beds.html">ΚΡΕΒΑΤΙΑ</a>
                 <ul class="DropDown">
                     <li><a href="/Codes/Beds_Accesories.html">ΠΑΡΕΛΚΟΜΕΝΑ ΚΡΕΒΑΤΙΩΝ</a></li>
                 </ul>
