--- a/Krevatotech/Codes/HomePage.html
+++ b/Krevatotech/Codes/HomePage.html
@@ -8,7 +8,7 @@
     <title>ΑΡΧΙΚΗ</title>
 
     <link rel="icon" href="/Images/BedArt_Icon.png">
-    <link rel="stylesheet" href="Codes/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!--Boxicons Icons-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -29,14 +29,14 @@
             <a href="/Codes/HomePage.html"><img src="/Images/BedArt_Logo.png" alt="Company logo"></a>
 
             <ul>
-            <li><a href="/Codes/HomePage.html">ΑΡΧΙΚΗ</a></li>
+            <li><a href="HomePage.html">ΑΡΧΙΚΗ</a></li>
             <li>
-                <a href="Codes/Beds.html">ΚΡΕΒΑΤΙΑ</a>
+                <a href="Beds.html">ΚΡΕΒΑΤΙΑ</a>
                 <ul class="DropDown">
-                    <li><a href="/Codes/Beds_Accesories.html">ΠΑΡΕΛΚΟΜΕΝΑ ΚΡΕΒΑΤΙΩΝ</a></li>
+                    <li><a href="Beds_Accesories.html">ΠΑΡΕΛΚΟΜΕΝΑ ΚΡΕΒΑΤΙΩΝ</a></li>
                 </ul>
             </li>
-            <li><a href="/Codes/Info.html">ΕΠΙΚΟΙΚΩΝΙΑ</a></li>
+            <li><a href="Info.html">ΕΠΙΚΟΙΚΩΝΙΑ</a></li>
             </ul>
         </nav>
     </div>
