--- a/Krevatotech/Codes/HomePage.html
+++ b/Krevatotech/Codes/HomePage.html
@@ -8,7 +8,7 @@
     <title>ΑΡΧΙΚΗ</title>
 
     <link rel="icon" href="/Images/BedArt_Icon.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Codes/style.css">
 
     <!--Boxicons Icons-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
