--- a/Krevatotech/Codes/HomePage.html
+++ b/Krevatotech/Codes/HomePage.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ΑΡΧΙΚΗ</title>
 
-    <link rel="icon" href="Images/BedArt_Icon.png">
+    <link rel="icon" href="/Images/BedArt_Icon.png">
     <link rel="stylesheet" href="Codes/style.css">
 
     <!--Boxicons Icons-->
