--- a/Krevatotech/Codes/HomePage.html
+++ b/Krevatotech/Codes/HomePage.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ΑΡΧΙΚΗ</title>
 
-    <link rel="icon" href="/Images/BedArt_Icon.png">
+    <link rel="icon" href="Images/BedArt_Icon.png">
     <link rel="stylesheet" href="Codes/style.css">
 
     <!--Boxicons Icons-->
@@ -26,7 +26,7 @@
 
     <div class="Navigation-Links">
         <nav>
-            <a href="/Codes/HomePage.html"><img src="Images/BedArt_Logo.png" alt="Company logo"></a>
+            <a href="/Codes/HomePage.html"><img src="/Images/BedArt_Logo.png" alt="Company logo"></a>
 
             <ul>
             <li><a href="HomePage.html">ΑΡΧΙΚΗ</a></li>
