--- a/Krevatotech/Codes/HomePage.html
+++ b/Krevatotech/Codes/HomePage.html
@@ -8,7 +8,7 @@
     <title>ΑΡΧΙΚΗ</title>
 
     <link rel="icon" href="/Images/BedArt_Icon.png">
-    <link rel="stylesheet" href="Codes/style.css">
+    <link rel="stylesheet" href="/Codes/style.css">
 
     <!--Boxicons Icons-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -26,7 +26,7 @@
 
     <div class="Navigation-Links">
         <nav>
-            <a href="/Codes/HomePage.html"><img src="Images/BedArt_Logo.png" alt="Company logo"></a>
+            <a href="/Codes/HomePage.html"><img src="/Images/BedArt_Logo.png" alt="Company logo"></a>
 
             <ul>
             <li><a href="HomePage.html">ΑΡΧΙΚΗ</a></li>
