--- a/Krevatotech/Codes/HomePage.html
+++ b/Krevatotech/Codes/HomePage.html
@@ -26,7 +26,7 @@
 
     <div class="Navigation-Links">
         <nav>
-            <a href="/Codes/HomePage.html"><img src="/Images/BedArt_Logo.png" alt="Company logo"></a>
+            <a href="/Codes/HomePage.html"><img src="../Images/BedArt_Logo.png" alt="Company logo"></a>
 
             <ul>
             <li><a href="HomePage.html">ΑΡΧΙΚΗ</a></li>
