--- a/Krevatotech/Codes/HomePage.html
+++ b/Krevatotech/Codes/HomePage.html
@@ -47,32 +47,32 @@
         <div class="Section_List swiper-wrapper">
             
             <div class="Section_Itself swiper-slide">
-                <a href="/Codes/Beds.html"><img src="https://www.somabed.gr/products_img/tcache/thumb_cb_22__1920x1920_1722637107_kre.jpg" alt="Beds_Example"></a>
+                <a href="Beds.html"><img src="https://www.somabed.gr/products_img/tcache/thumb_cb_22__1920x1920_1722637107_kre.jpg" alt="Beds_Example"></a>
                 <h1>Beds</h1>
             </div>
 
             <div class="Section_Itself swiper-slide">
-                <a href="/Codes/Pillows.html"><img src="https://www.somabed.gr/products_img/tcache/thumb_cb_24__1920x1920_1725231120_str.jpg"></a>
+                <a href="Pillows.html"><img src="https://www.somabed.gr/products_img/tcache/thumb_cb_24__1920x1920_1725231120_str.jpg"></a>
                 <h1>Pillows</h1>
             </div>
 
             <div class="Section_Itself swiper-slide">
-                <a href="/Codes/Layer.html"><img src="https://www.somabed.gr/products_img/tcache/thumb_cb_23__1920x1920_1722637201_sal101.jpg"></a>     
+                <a href="Layer.html"><img src="https://www.somabed.gr/products_img/tcache/thumb_cb_23__1920x1920_1722637201_sal101.jpg"></a>     
                 <h1>Storage beds</h1>
             </div>
 
             <div class="Section_Itself swiper-slide">
-                <a href="/Codes/Beds.html"><img src="https://www.somabed.gr/products_img/tcache/thumb_cb_22__1920x1920_1722637107_kre.jpg" alt="Beds_Example"></a>
+                <a href="Beds.html"><img src="https://www.somabed.gr/products_img/tcache/thumb_cb_22__1920x1920_1722637107_kre.jpg" alt="Beds_Example"></a>
                 <h1>Beds</h1>
             </div>
 
             <div class="Section_Itself swiper-slide">
-                <a href="/Codes/Pillow.html"><img src="https://www.somabed.gr/products_img/tcache/thumb_cb_24__1920x1920_1725231120_str.jpg"></a>
+                <a href="Pillow.html"><img src="https://www.somabed.gr/products_img/tcache/thumb_cb_24__1920x1920_1725231120_str.jpg"></a>
                 <h1>Pillows</h1>
             </div>
 
             <div class="Section_Itself swiper-slide">
-                <a href="/Codes/Layer.html"><img src="https://www.somabed.gr/products_img/tcache/thumb_cb_23__1920x1920_1722637201_sal101.jpg"></a>     
+                <a href="Layer.html"><img src="https://www.somabed.gr/products_img/tcache/thumb_cb_23__1920x1920_1722637201_sal101.jpg"></a>     
                 <h1>Storage beds</h1>
             </div>
         </div>
