--- a/Krevatotech/Codes/Beds.html
+++ b/Krevatotech/Codes/Beds.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ΚΡΕΒΑΤΙΑ</title>
 
-    <link rel="icon" href="/Images/BedArt_Icon.png">
-    <link rel="stylesheet" href="/Codes/style.css">
+    <link rel="icon" href="../Images/BedArt_Icon.png">
+    <link rel="stylesheet" href="style.css">
     
     <!--GoogleFontsLinks--> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,17 +20,17 @@
     
     <div class="Navigation-Links">
         <nav>
-            <a href="/Codes/HomePage.html"><img src="/Images/BedArt_Logo.png" alt="Company logo"></a>
+            <a href="HomePage.html"><img src="../Images/BedArt_Logo.png" alt="Company logo"></a>
 
             <ul>
-            <li><a href="/Codes/HomePage.html">ΑΡΧΙΚΗ</a></li>
+            <li><a href="HomePage.html">ΑΡΧΙΚΗ</a></li>
             <li>
-                <a href="/Codes/Beds.html">ΚΡΕΒΑΤΙΑ</a>
+                <a href="Beds.html">ΚΡΕΒΑΤΙΑ</a>
                 <ul class="DropDown">
-                    <li><a href="/Codes/Beds_Accesories.html">ΠΑΡΕΛΚΟΜΕΝΑ ΚΡΕΒΑΤΙΩΝ</a></li>
+                    <li><a href="Beds_Accesories.html">ΠΑΡΕΛΚΟΜΕΝΑ ΚΡΕΒΑΤΙΩΝ</a></li>
                 </ul>
             </li>
-            <li><a href="/Codes/Info.html">ΕΠΙΚΟΙΚΩΝΙΑ</a></li>
+            <li><a href="Info.html">ΕΠΙΚΟΙΚΩΝΙΑ</a></li>
             </ul>
 
         </nav>
@@ -39,7 +39,7 @@
 <div class="ShowRoum_Container">
 
     <div class="ShowRoum_Gallery">
-        <a target="_self" href="/Codes/BedsCodes/Barcelona.html"><img src="/Images/Barcelona.jpg" alt="Barcelona"></a>
+        <a target="_self" href="BedsCodes/Barcelona.html"><img src="../Images/Barcelona.jpg" alt="Barcelona"></a>
         <div class="ShowRoum_Description">Barcelona</div>
     </div>
 
