--- a/Krevatotech/Codes/BedsCodes/Barcelona.html
+++ b/Krevatotech/Codes/BedsCodes/Barcelona.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barcelona</title>
 
-    <link rel="icon" href="/Images/BedArt_Icon.png">
-    <link rel="stylesheet" href="/Codes/style.css">
+    <link rel="icon" href="../../Images/BedArt_Icon.png">
+    <link rel="stylesheet" href="../style.css">
     
     <!--GoogleFontsLinks--> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,8 +33,8 @@
     </div>
     
     <div class="Extra_Information_Container">
-        <div id="Zoom_Image" style="--url:url(/Images/Barcelona.jpg); --zoom-x: 0%; --zoom-y: 0%; --display: none">
-            <img src="/Images/Barcelona.jpg" alt="Barcelona">
+        <div id="Zoom_Image" style="--url:url(../../Images/Barcelona.jpg); --zoom-x: 0%; --zoom-y: 0%; --display: none">
+            <img src="../../Images/Barcelona.jpg" alt="Barcelona">
         </div>
     <div class="Extra_Information_Description">
         <h1>Barcelona</h1>
