--- a/Krevatotech/Codes/BedsCodes/Barcelona.html
+++ b/Krevatotech/Codes/BedsCodes/Barcelona.html
@@ -44,7 +44,7 @@
         </p>
     </div>
 </div>
-<script src="/Codes/Image_Script.js"></script>
+<script src="../Image_Script.js"></script>
 
 </body>
 </html>
