--- a/Krevatotech/Codes/BedsCodes/Barcelona.html
+++ b/Krevatotech/Codes/BedsCodes/Barcelona.html
@@ -23,10 +23,9 @@
             <a href="/Codes/HomePage.html"><img src="/Images/BedArt_Logo.png" alt="Company logo"></a>
 
             <ul>
-                <li><a href="/Codes/HomePage.html">ΑΡΧΙΚΗ</a></li>
-                <li><a href="/Codes/Beds.html">ΚΡΕΒΑΤΙΑ</a></li>
-                <li><a href="/Codes/Beds_Accesories.html">ΠΑΡΕΛΚΟΜΕΝΑ ΚΡΕΒΑΤΙΩΝ</a></li>
-                <li><a href="/Codes/Info.html">ΕΠΙΚΟΙΚΩΝΙΑ</a></li>
+                <li><a href="../HomePage.html">ΑΡΧΙΚΗ</a></li>
+                <li><a href="../Beds.html">ΚΡΕΒΑΤΙΑ</a></li>
+                <li><a href="../Info.html">ΕΠΙΚΟΙΚΩΝΙΑ</a></li>
             </ul>
 
         </nav>
