--- a/Krevatotech/Codes/BedsCodes/Barcelona.html
+++ b/Krevatotech/Codes/BedsCodes/Barcelona.html
@@ -32,7 +32,7 @@
     </div>
     
     <div class="Extra_Information_Container">
-        <div id="Zoom_Image" style="--url:url(../../Images/Barcelona.jpg); --zoom-x: 0%; --zoom-y: 0%; --display: none">
+        <div class="Zoom_Image" style="--url:url(../../Images/Barcelona.jpg); --zoom-x: 0%; --zoom-y: 0%; --display: none">
             <img src="../../Images/Barcelona.jpg" alt="Barcelona">
         </div>
     <div class="Extra_Information_Description">
