--- a/Krevatotech/Codes/HomePage.html
+++ b/Krevatotech/Codes/HomePage.html
@@ -66,7 +66,7 @@
                 <li><a href="Pillows.html">Μαξιλάρια</a></li>
                 <li><a href="Layers.html">Στρώματα</a></li>
                 <li><a href="Extra_Layers.html">Ανωστρώματα</a></li>
-                <li><a href="BedsProtection.html">Προστατευτικά</a></li>
+                <li><a href="BedProtection.html">Προστατευτικά</a></li>
                 <li><a href="OurCompany.html">Η εταιρεία μας</a></li>
                 <li><a href="Info.html">Επικοινωνία</a></li>
             </ul>
