--- a/Krevatotech/Codes/HomePage.html
+++ b/Krevatotech/Codes/HomePage.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ΑΡΧΙΚΗ</title>
 
-    <link rel="icon" href="../Images/Icon.png">
+    <link rel="icon" type="image/png" href="../Images/Icon.png" class="Company_Icon">
     <link rel="stylesheet" href="style.css">
 
     <!--Boxicons Icons-->
@@ -57,6 +57,7 @@
                 </li> <!-- Closing <li> for dropdown -->
                 <li><a href="OurCompany.html">Η ΕΤΑΙΡΕΙΑ ΜΑΣ</a></li>
                 <li><a href="Info.html">ΕΠΙΚΟΙΝΩΝΙΑ</a></li>
+                <li><a href="LoginPage.html" class="button">ΣΥΝΔΕΣΗ</a></li>
             </ul>
 
             <ul id="Phone_Navigation" data-visible="false" class="Phone_Navigation flex"> 
@@ -69,6 +70,7 @@
                 <li><a href="BedProtection.html">Προστατευτικά</a></li>
                 <li><a href="OurCompany.html">Η εταιρεία μας</a></li>
                 <li><a href="Info.html">Επικοινωνία</a></li>
+                <li><a href="LoginPage.html">Σύνδεση</a></li>
             </ul>
         </nav>
     </div>
@@ -111,11 +113,12 @@
     </div>
 </div>
 
-<!--For phones
+<!--
 <div class="swiper-pagination"></div>
 <div class="swiper-button-prev"></div>
 <div class="swiper-button-next"></div>
 -->
+
 <div class="Draw_lines">
     <h1>Κατηγορίες Προϊόντων</h1>
 </div>
@@ -232,6 +235,7 @@
                 <li><a href="Layers.html">Στρώματα</a></li>
                 <li><a href="Extra_Layers.html">Ανωστρώματα</a></li>
                 <li><a href="BedProtection.html">Προστατευτικά</a></li>
+                <li><a href="OurCompany.html">Η εταιρεία μας</a></li>
             </ul>
         </div>
 
@@ -265,6 +269,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="Slider_Script.js"></script>
     <script src="MoreDevices_Script.js"></script>
+    <script src="Change_Icon.js"></script>
     
 
 </body>
