--- a/Krevatotech/Codes/LoginPage.html
+++ b/Krevatotech/Codes/LoginPage.html
@@ -76,22 +76,22 @@
 </header>
 
 <div class="LogIn_PlatformContainer">
-    <div class="FormBox">
+    <div class="Login_FormBox">
 
-	    <div class="FormContent">
+	    <div class="Login_FormContent">
 		    <h1>Σύνδεση</h1>
         	<form action="LoginPlatfrom.php" method="post">
-            	<div class="Label_Itself">
+            	<div class="Login_Label_Itself">
                     	<input type="text" name="username" required>
                     <label for="username">Username:</label>
                     <i class='bx bx-user'></i>
                 </div>
-            	<div class="Label_Itself">
-                        <input type="password" name="password" minlength="8" maxlength="16" required>	
+            	<div class="Login_Label_Itself">
+                        <input type="password" name="password" id="password" minlength="8" maxlength="16" required>	
                     <label for="password">Password:</label> 	
                     <i class='bx bx-lock-alt'></i>
             	</div>
-            	<div class="Label_Button">
+            	<div class="Login_Label_Button">
                		<input type="submit" name="LogIn" value="Σύνδεση">
             	</div>
         	</form>
