--- a/Krevatotech/Codes/OurCompany.html
+++ b/Krevatotech/Codes/OurCompany.html
@@ -73,63 +73,22 @@
   
 
 
-<section class="Information_Container">
+<section class="OurCompany">
 
-    <div class="Communication_Box">
-
-        <div class="Information">
-                <h1>Στοιχεία Επικοινωνίας</h1>
-                <p>
-                    Email : krevatotechniki@gmail.com<br>
-                    Σταθερό Τηλέφωνο : 213 004 4327<br>
-                    Τοποθεσία : Αγίας Άννης 10, 2η πάροδος,Ταυρος Αττικής<br>
-                    Τ.Κ : 177 78 
-                </p>
-
-            <div class="socials">
-                <a href="https://www.instagram.com/"><i class='bx bxl-instagram' ></i></a>
-                <a href="https://www.tiktok.com/foryou?lang=en"><i class='bx bxl-tiktok'></i></a>
-                <a href="#"><i class='bx bx-phone'></i></a>
-                <a href="https://x.com/?lang=el"><i class='bx bxl-twitter' ></i></a>
-                <a href="https://www.facebook.com/"><i class='bx bxl-facebook'></i></a>
-            </div>
-        </div>
-
-        <div class="Communication_Content">
-            <h1>Φόρμα Επικοινωνίας</h1>
-        <form action="CommunicationPlatform.php" method="post">
-
-            <div class="Communication_Label_Itself">
-                    <input type="text" name="User_Name" required>
-                <label for="User_Name">Ονοματεπώνυμο:</label>
-            </div>
-
-            <div class="Communication_Label_Itself">
-                    <input type="email" name="User_Email" required>
-                <label for="User_Email">Email:</label>
-            </div>
-
-            <div class="Communication_Label_Itself">
-                    <input type="text" name="User_Tittle" required>
-                <label for="User_Tittle">Θέμα:</label>
-            </div>
-
-            <div class="Communication_Label_Itself">
-                <div class="TextArea_Label">
-                        <textarea name="User_Message" rows="4" cols="50"></textarea>
-                    <label name="User_Message">Το μύνημα σας:</label>
-                </div>
-            </div>
-
-            <div class="Communication_Label_Button">
-                <input type="submit" name="Submit" value="ΑΠΟΣΤΟΛΗ" class="Button">
-            </div>
-        </form>
-        </div>
-
+    <div class="Information">
+        <h1>Λίγα Λόγια για εμάς</h1>
+        <p>
+            Μετά από 25 χρόνια εμπειρίας, στην κατασκευή <b><i>ποιοτικών επίπλων</i></b>, επικεντρωθήκαμε στην κατασκευή <b><i>ντυμένων κρεβατιών</i></b> και <b><i>γωνιακών σαλονιών</i></b>.<br>
+            Διαθέτουμε όλα τα παρελκόμενα για το κρεβάτι που θα επιλέξετε, όπως στρώματα, ανωστρώματα, υποστρώματα, καλύμματα, ανατομικά πλαίσια, μαξιλάρια.<br>
+            Με προτάσεις τόσο σε χρώματα όσο και σε σχέδια, είμαστε ικανοί να ικανοποιήσουμε κάθε επιθυμία σας.<br>
+            Αναλαμβάνουμε την αντικατάσταση ταπετσαρίας σε κάθε έπιπλο, επαγγελματικό ή οικιακό.<br>
+            Στόχος μας είναι η μέγιστη ικανοποίηση του πελάτη, από την αγορά ποιοτικών επίπλων, με όσο το δυνατόν χαμηλότερη τιμή.<br>
+            Είμαστε <b><i>βιοτεχνία (χωρίς μεσάζοντες)</i></b> γι΄αυτό και μπορούμε να κρατάμε χαμηλές τιμές.<br>
+            <b><i>Η ικανοποίησή σας είναι η καλύτερη διαφήμιση για εμάς.<br>
+            Σας ευχαριστούμε για την εμπιστοσύνη σας!</b></i><br>
+        </p>
+        <img src="../Images/HandMade.jpg">
     </div>
-
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3145.092995656308!2d23.685017!3d37.974959!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1bc919b746c9d%3A0x940e8d721d2fe836!2zzqDOsc-BLiAxzrcgMTAsIM6kzrHPjc-Bzr_PgiDOkc-Ez4TOuc66zq7PgiAxNzcgNzg!5e0!3m2!1sel!2sgr!4v1728558948382!5m2!1sel!2sgr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
 
 <footer class="footer">
